--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     body{
       font-family:'Inter',system-ui,-apple-system,Segoe UI,Roboto,Arial,Helvetica,sans-serif;
       color:var(--ink);
-      background:var(--bg) url('assets/fleet-bg.jpg') no-repeat center center fixed;
+      background:var(--bg) url('assets/fleet-bg.png') no-repeat center center fixed;
       background-size:cover;
     }
     .container{
