--- a/index.html
+++ b/index.html
@@ -23,15 +23,18 @@
     body{
       font-family:'Inter',system-ui,-apple-system,Segoe UI,Roboto,Arial,Helvetica,sans-serif;
       color:var(--ink);
-      background:var(--bg) url('assets/fleet-bg.png') no-repeat center center fixed;
-      background-size:cover;
+     background:var(--bg) url('assets/fleet-bg.png?v=2') no-repeat center center fixed;
+background-size:cover;
+;
     }
     .container{
-      max-width:1100px;
-      margin:0 auto;
-      padding:0 20px;
-      background:rgba(11,18,32,0.8);
-      border-radius:12px;
+  max-width:1100px;
+  margin:0 auto;
+  padding:0 20px;
+  /* background:rgba(11,18,32,0.8); */  /* remove or comment out */
+  border-radius:12px;
+}
+
     }
     header{
       position:sticky;
