--- a/index.html
+++ b/index.html
@@ -139,11 +139,61 @@ background-size:cover;
   </header>
 
   <section id="about">
-    <div class="container">
-      <h2>About Us</h2>
-      <p>We provide complete fleet management services including mechanic work, collision repair, maintenance, towing, and roadside assistance. No business is too big for us — we cater to all-size fleets to keep you running efficiently.</p>
+  <div class="container">
+    <h2>Fleet Management NY – Keeping Your Fleet Road-Ready and Reliable</h2>
+    <p>At Fleet Management NY, we specialize in complete fleet care solutions designed to keep your vehicles on the road and your business moving forward. Our services cover every aspect of fleet operations, from mechanical repairs and collision restoration to routine maintenance and inspection management. We understand that downtime costs money, so we deliver efficient, high-quality service to ensure your fleet performs at its best every day.</p>
+
+    <ul style="line-height:1.7; color:#d8e0ea;">
+      <li><strong>Preventive Maintenance & Inspections:</strong> Oil changes, brakes, tires, and safety checks to prevent costly breakdowns.</li>
+      <li><strong>Mechanical & Electrical Repairs:</strong> Fast and accurate diagnostics with OEM-level precision.</li>
+      <li><strong>Collision Repair & Bodywork:</strong> Expert restoration from minor dents to major accident damage, including paint and refinishing.</li>
+      <li><strong>Fleet Tracking & Maintenance Scheduling:</strong> Custom service schedules and record-keeping to keep your operation organized and compliant.</li>
+      <li><strong>24/7 Towing & Roadside Assistance:</strong> Reliable towing support available for local and long-distance service (based on coverage area).</li>
+      <li><strong>Glass & Vinyl Wrap Services:</strong> From windshield replacement to custom commercial lettering and wraps that promote your brand on the go.</li>
+    </ul>
+<section id="services">
+  <div class="container">
+    <h2>What We Offer</h2>
+    <p>Fleet Management NY provides a full range of services to support your vehicles from start to finish. We combine experience, technology, and attention to detail to ensure your fleet stays reliable, safe, and looking its best.</p>
+
+    <div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(280px,1fr));gap:20px;margin-top:25px;">
+      <div style="background:rgba(255,255,255,0.05);padding:20px;border-radius:12px;box-shadow:0 4px 15px rgba(0,0,0,0.3);">
+        <h3 style="color:#42a5f5;">⚙️ Fleet Maintenance</h3>
+        <p>From oil changes to full inspections, we handle preventive maintenance to avoid costly downtime.</p>
+      </div>
+
+      <div style="background:rgba(255,255,255,0.05);padding:20px;border-radius:12px;box-shadow:0 4px 15px rgba(0,0,0,0.3);">
+        <h3 style="color:#42a5f5;">🔧 Mechanical & Electrical Repairs</h3>
+        <p>Engine diagnostics, suspension work, brakes, AC systems, and more — handled with OEM-level precision.</p>
+      </div>
+
+      <div style="background:rgba(255,255,255,0.05);padding:20px;border-radius:12px;box-shadow:0 4px 15px rgba(0,0,0,0.3);">
+        <h3 style="color:#42a5f5;">🚗 Collision & Body Repair</h3>
+        <p>Complete accident restoration, frame work, and paint refinishing to restore vehicles to showroom condition.</p>
+      </div>
+
+      <div style="background:rgba(255,255,255,0.05);padding:20px;border-radius:12px;box-shadow:0 4px 15px rgba(0,0,0,0.3);">
+        <h3 style="color:#42a5f5;">🪟 Glass & Wrap Services</h3>
+        <p>Windshield repair, full vinyl wraps, and custom lettering to brand your vehicles professionally.</p>
+      </div>
+
+      <div style="background:rgba(255,255,255,0.05);padding:20px;border-radius:12px;box-shadow:0 4px 15px rgba(0,0,0,0.3);">
+        <h3 style="color:#42a5f5;">⛓️ Towing & Roadside Assistance</h3>
+        <p>Available for local and long-distance service. Quick, dependable, and ready when you need us most.</p>
+      </div>
+
+      <div style="background:rgba(255,255,255,0.05);padding:20px;border-radius:12px;box-shadow:0 4px 15px rgba(0,0,0,0.3);">
+        <h3 style="color:#42a5f5;">📋 Fleet Scheduling & Tracking</h3>
+        <p>We organize maintenance records and reminders to help you stay compliant and operational year-round.</p>
+      </div>
     </div>
-  </section>
+  </div>
+</section>
+
+    <p>At Fleet Management NY, our mission is simple: to keep your fleet fully operational for your success. We act as your trusted partner—managing every vehicle as if it were our own—so you can focus on running your business while we handle the rest.</p>
+  </div>
+</section>
+
 
   <section id="services">
     <div class="container">
