--- a/index.html
+++ b/index.html
@@ -23,69 +23,18 @@
     body{
       font-family:'Inter',system-ui,-apple-system,Segoe UI,Roboto,Arial,Helvetica,sans-serif;
       color:var(--ink);
-     background:var(--bg) url('assets/fleet-bg.png?v=2') no-repeat center center fixed;
-background-size:cover;
-;
+      background:var(--bg) url('assets/fleet-bg.png?v=2') no-repeat center center fixed;
+      background-size:cover;
     }
     .container{
-  max-width:1100px;
-  margin:0 auto;
-  padding:0 20px;
-  /* background:rgba(11,18,32,0.8); */  /* remove or comment out */
-  border-radius:12px;
-}
-
+      max-width:1100px;
+      margin:0 auto;
+      padding:0 20px;
+      /* If you want a subtle tint over the photo, uncomment the next line */
+      /* background:rgba(11,18,32,0.45); */
+      border-radius:12px;
     }
     header{
-      <section id="hero" style="
-  position:relative;
-  height:70vh;
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  text-align:center;
-  color:white;
-  background:url('assets/fleet-bg.png?v=2') no-repeat center center/cover;
-  overflow:hidden;
-">
-  <div style="
-    position:absolute;
-    inset:0;
-    background:rgba(0,0,0,0.55);
-    backdrop-filter:blur(2px);
-  "></div>
-
-  <div style="position:relative;z-index:1;">
-    <img src="assets/logo.png" alt="Fleet Management NY logo" style="
-      width:300px;
-      max-width:80%;
-      border-radius:12px;
-      box-shadow:0 4px 20px rgba(66,165,245,0.4);
-      margin-bottom:20px;
-    ">
-    <h1 style="font-size:2.5rem;font-weight:800;color:#42a5f5;margin-bottom:10px;">
-      Fleet Management NY
-    </h1>
-    <p style="font-size:1.25rem;max-width:700px;margin:auto;color:#e6edf6;">
-      Professional Fleet Care • Collision Repair • 24/7 Support
-    </p>
-    <a href="#contact" style="
-      display:inline-block;
-      margin-top:25px;
-      background:#42a5f5;
-      color:white;
-      padding:14px 28px;
-      border-radius:10px;
-      font-weight:700;
-      text-decoration:none;
-      box-shadow:0 6px 20px rgba(66,165,245,0.4);
-      transition:0.3s;
-    " onmouseover="this.style.background='#1e88e5'" onmouseout="this.style.background='#42a5f5'">
-      Contact Us
-    </a>
-  </div>
-</section>
-
       position:sticky;
       top:0;
       z-index:50;
@@ -97,21 +46,10 @@ background-size:cover;
       display:flex;
       align-items:center;
       justify-content:space-between;
-      height:90px;
-    }
-    .brand{
-      display:flex;
-      align-items:center;
-      gap:.75rem;
-    }
-    .brand img{
-      height:60px;
-      width:auto;
-      border-radius:8px;
-      box-shadow:0 0 10px rgba(66,165,245,.3);
+      height:70px;
     }
     .brand h1{
-      font-size:1.4rem;
+      font-size:1.1rem;
       margin:0;
       font-weight:800;
       letter-spacing:.3px;
@@ -141,6 +79,8 @@ background-size:cover;
     }
     h2{font-size:1.8rem;margin:0 0 .8rem}
     p{line-height:1.65;color:#d8e0ea}
+
+    /* Contact grid */
     .contact{
       display:grid;
       grid-template-columns:repeat(12,1fr);
@@ -169,14 +109,19 @@ background-size:cover;
       cursor:pointer;
       box-shadow:0 10px 24px var(--ring);
     }
+
+    /* Responsive */
+    @media(max-width:900px){
+      .contact .col{grid-column:span 12}
+    }
   </style>
 </head>
 
 <body>
+  <!-- Header / Top Nav -->
   <header>
     <div class="container nav">
       <div class="brand">
-        <img src="assets/logo.png" alt="Fleet Management NY logo">
         <h1>Fleet Management NY</h1>
       </div>
       <nav>
@@ -187,70 +132,117 @@ background-size:cover;
     </div>
   </header>
 
-  <section id="about">
-  <div class="container">
-    <h2>Fleet Management NY – Keeping Your Fleet Road-Ready and Reliable</h2>
-    <p>At Fleet Management NY, we specialize in complete fleet care solutions designed to keep your vehicles on the road and your business moving forward. Our services cover every aspect of fleet operations, from mechanical repairs and collision restoration to routine maintenance and inspection management. We understand that downtime costs money, so we deliver efficient, high-quality service to ensure your fleet performs at its best every day.</p>
+  <!-- HERO BANNER (big logo + tagline) -->
+  <section id="hero" style="
+    position:relative;
+    height:70vh;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    text-align:center;
+    color:white;
+    background:url('assets/fleet-bg.png?v=2') no-repeat center center/cover;
+    overflow:hidden;
+    border-top:none;
+  ">
+    <div style="
+      position:absolute;
+      inset:0;
+      background:rgba(0,0,0,0.55);
+      backdrop-filter:blur(2px);
+    "></div>
 
-    <ul style="line-height:1.7; color:#d8e0ea;">
-      <li><strong>Preventive Maintenance & Inspections:</strong> Oil changes, brakes, tires, and safety checks to prevent costly breakdowns.</li>
-      <li><strong>Mechanical & Electrical Repairs:</strong> Fast and accurate diagnostics with OEM-level precision.</li>
-      <li><strong>Collision Repair & Bodywork:</strong> Expert restoration from minor dents to major accident damage, including paint and refinishing.</li>
-      <li><strong>Fleet Tracking & Maintenance Scheduling:</strong> Custom service schedules and record-keeping to keep your operation organized and compliant.</li>
-      <li><strong>24/7 Towing & Roadside Assistance:</strong> Reliable towing support available for local and long-distance service (based on coverage area).</li>
-      <li><strong>Glass & Vinyl Wrap Services:</strong> From windshield replacement to custom commercial lettering and wraps that promote your brand on the go.</li>
-    </ul>
-<section id="services">
-  <div class="container">
-    <h2>What We Offer</h2>
-    <p>Fleet Management NY provides a full range of services to support your vehicles from start to finish. We combine experience, technology, and attention to detail to ensure your fleet stays reliable, safe, and looking its best.</p>
-
-    <div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(280px,1fr));gap:20px;margin-top:25px;">
-      <div style="background:rgba(255,255,255,0.05);padding:20px;border-radius:12px;box-shadow:0 4px 15px rgba(0,0,0,0.3);">
-        <h3 style="color:#42a5f5;">⚙️ Fleet Maintenance</h3>
-        <p>From oil changes to full inspections, we handle preventive maintenance to avoid costly downtime.</p>
-      </div>
-
-      <div style="background:rgba(255,255,255,0.05);padding:20px;border-radius:12px;box-shadow:0 4px 15px rgba(0,0,0,0.3);">
-        <h3 style="color:#42a5f5;">🔧 Mechanical & Electrical Repairs</h3>
-        <p>Engine diagnostics, suspension work, brakes, AC systems, and more — handled with OEM-level precision.</p>
-      </div>
-
-      <div style="background:rgba(255,255,255,0.05);padding:20px;border-radius:12px;box-shadow:0 4px 15px rgba(0,0,0,0.3);">
-        <h3 style="color:#42a5f5;">🚗 Collision & Body Repair</h3>
-        <p>Complete accident restoration, frame work, and paint refinishing to restore vehicles to showroom condition.</p>
-      </div>
-
-      <div style="background:rgba(255,255,255,0.05);padding:20px;border-radius:12px;box-shadow:0 4px 15px rgba(0,0,0,0.3);">
-        <h3 style="color:#42a5f5;">🪟 Glass & Wrap Services</h3>
-        <p>Windshield repair, full vinyl wraps, and custom lettering to brand your vehicles professionally.</p>
-      </div>
-
-      <div style="background:rgba(255,255,255,0.05);padding:20px;border-radius:12px;box-shadow:0 4px 15px rgba(0,0,0,0.3);">
-        <h3 style="color:#42a5f5;">⛓️ Towing & Roadside Assistance</h3>
-        <p>Available for local and long-distance service. Quick, dependable, and ready when you need us most.</p>
-      </div>
-
-      <div style="background:rgba(255,255,255,0.05);padding:20px;border-radius:12px;box-shadow:0 4px 15px rgba(0,0,0,0.3);">
-        <h3 style="color:#42a5f5;">📋 Fleet Scheduling & Tracking</h3>
-        <p>We organize maintenance records and reminders to help you stay compliant and operational year-round.</p>
-      </div>
-    </div>
-  </div>
-</section>
-
-    <p>At Fleet Management NY, our mission is simple: to keep your fleet fully operational for your success. We act as your trusted partner—managing every vehicle as if it were our own—so you can focus on running your business while we handle the rest.</p>
-  </div>
-</section>
-
-
-  <section id="services">
-    <div class="container">
-      <h2>What We Offer</h2>
-      <p>Preventive maintenance, mechanical and electrical diagnostics, collision repair, paint and wraps, glass services, towing, and roadside support. Our team ensures your vehicles stay road-ready and compliant year-round.</p>
+    <div style="position:relative;z-index:1;">
+      <img src="assets/logo.png" alt="Fleet Management NY logo" style="
+        width:300px;
+        max-width:80%;
+        border-radius:12px;
+        box-shadow:0 4px 20px rgba(66,165,245,0.4);
+        margin-bottom:20px;
+      ">
+      <h1 style="font-size:2.5rem;font-weight:800;color:#42a5f5;margin-bottom:10px;">
+        Fleet Management NY
+      </h1>
+      <p style="font-size:1.25rem;max-width:700px;margin:auto;color:#e6edf6;">
+        Professional Fleet Care • Collision Repair • 24/7 Support
+      </p>
+      <a href="#contact" style="
+        display:inline-block;
+        margin-top:25px;
+        background:#42a5f5;
+        color:white;
+        padding:14px 28px;
+        border-radius:10px;
+        font-weight:700;
+        text-decoration:none;
+        box-shadow:0 6px 20px rgba(66,165,245,0.4);
+        transition:0.3s;
+      " onmouseover="this.style.background='#1e88e5'" onmouseout="this.style.background='#42a5f5'">
+        Contact Us
+      </a>
     </div>
   </section>
 
+  <!-- ABOUT -->
+  <section id="about">
+    <div class="container">
+      <h2>Fleet Management NY – Keeping Your Fleet Road-Ready and Reliable</h2>
+      <p>At Fleet Management NY, we specialize in complete fleet care solutions designed to keep your vehicles on the road and your business moving forward. Our services cover every aspect of fleet operations, from mechanical repairs and collision restoration to routine maintenance and inspection management. We understand that downtime costs money, so we deliver efficient, high-quality service to ensure your fleet performs at its best every day.</p>
+
+      <ul style="line-height:1.7; color:#d8e0ea;">
+        <li><strong>Preventive Maintenance & Inspections:</strong> Oil changes, brakes, tires, and safety checks to prevent costly breakdowns.</li>
+        <li><strong>Mechanical & Electrical Repairs:</strong> Fast and accurate diagnostics with OEM-level precision.</li>
+        <li><strong>Collision Repair & Bodywork:</strong> Expert restoration from minor dents to major accident damage, including paint and refinishing.</li>
+        <li><strong>Fleet Tracking & Maintenance Scheduling:</strong> Custom service schedules and record-keeping to keep your operation organized and compliant.</li>
+        <li><strong>24/7 Towing & Roadside Assistance:</strong> Reliable towing support available for local and long-distance service (based on coverage area).</li>
+        <li><strong>Glass & Vinyl Wrap Services:</strong> From windshield replacement to custom commercial lettering and wraps that promote your brand on the go.</li>
+      </ul>
+
+      <p>At Fleet Management NY, our mission is simple: to keep your fleet fully operational for your success. We act as your trusted partner—managing every vehicle as if it were our own—so you can focus on running your business while we handle the rest.</p>
+    </div>
+  </section>
+
+  <!-- WHAT WE OFFER (Grid cards) -->
+  <section id="services">
+    <div class="container">
+      <h2>What We Offer</h2>
+      <p>Fleet Management NY provides a full range of services to support your vehicles from start to finish. We combine experience, technology, and attention to detail to ensure your fleet stays reliable, safe, and looking its best.</p>
+
+      <div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(280px,1fr));gap:20px;margin-top:25px;">
+        <div style="background:rgba(255,255,255,0.05);padding:20px;border-radius:12px;box-shadow:0 4px 15px rgba(0,0,0,0.3);">
+          <h3 style="color:#42a5f5;">⚙️ Fleet Maintenance</h3>
+          <p>From oil changes to full inspections, we handle preventive maintenance to avoid costly downtime.</p>
+        </div>
+
+        <div style="background:rgba(255,255,255,0.05);padding:20px;border-radius:12px;box-shadow:0 4px 15px rgba(0,0,0,0.3);">
+          <h3 style="color:#42a5f5;">🔧 Mechanical & Electrical Repairs</h3>
+          <p>Engine diagnostics, suspension work, brakes, AC systems, and more — handled with OEM-level precision.</p>
+        </div>
+
+        <div style="background:rgba(255,255,255,0.05);padding:20px;border-radius:12px;box-shadow:0 4px 15px rgba(0,0,0,0.3);">
+          <h3 style="color:#42a5f5;">🚗 Collision & Body Repair</h3>
+          <p>Complete accident restoration, frame work, and paint refinishing to restore vehicles to showroom condition.</p>
+        </div>
+
+        <div style="background:rgba(255,255,255,0.05);padding:20px;border-radius:12px;box-shadow:0 4px 15px rgba(0,0,0,0.3);">
+          <h3 style="color:#42a5f5;">🪟 Glass & Wrap Services</h3>
+          <p>Windshield repair, full vinyl wraps, and custom lettering to brand your vehicles professionally.</p>
+        </div>
+
+        <div style="background:rgba(255,255,255,0.05);padding:20px;border-radius:12px;box-shadow:0 4px 15px rgba(0,0,0,0.3);">
+          <h3 style="color:#42a5f5;">⛓️ Towing & Roadside Assistance</h3>
+          <p>Available for local and long-distance service. Quick, dependable, and ready when you need us most.</p>
+        </div>
+
+        <div style="background:rgba(255,255,255,0.05);padding:20px;border-radius:12px;box-shadow:0 4px 15px rgba(0,0,0,0.3);">
+          <h3 style="color:#42a5f5;">📋 Fleet Scheduling & Tracking</h3>
+          <p>We organize maintenance records and reminders to help you stay compliant and operational year-round.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- CONTACT -->
   <section id="contact">
     <div class="container contact">
       <div class="col">
