--- a/index.html
+++ b/index.html
@@ -134,17 +134,20 @@
 
   <!-- HERO BANNER (big logo + tagline) -->
   <section id="hero" style="
-    position:relative;
-    height:70vh;
-    display:flex;
-    align-items:center;
-    justify-content:center;
-    text-align:center;
-    color:white;
-    background:url('assets/fleet-bg.png?v=2') no-repeat center center/cover;
-    overflow:hidden;
-    border-top:none;
-  ">
+  position:relative;
+  min-height:80vh;
+  padding:120px 20px 100px;
+  display:flex;
+  flex-direction:column;
+  align-items:center;
+  justify-content:center;
+  text-align:center;
+  color:white;
+  background:url('assets/fleet-bg.png?v=2') no-repeat center center/cover;
+  overflow:hidden;
+  border-top:none;
+">
+
     <div style="
       position:absolute;
       inset:0;
