--- a/index.html
+++ b/index.html
@@ -157,12 +157,13 @@
 
     <div style="position:relative;z-index:1;">
       <img src="assets/logo.png" alt="Fleet Management NY logo" style="
-        width:300px;
-        max-width:80%;
-        border-radius:12px;
-        box-shadow:0 4px 20px rgba(66,165,245,0.4);
-        margin-bottom:20px;
-      ">
+  width:300px;
+  max-height:220px;
+  border-radius:12px;
+  box-shadow:0 4px 20px rgba(66,165,245,0.4);
+  margin-bottom:20px;
+">
+
       <h1 style="font-size:2.5rem;font-weight:800;color:#42a5f5;margin-bottom:10px;">
         Fleet Management NY
       </h1>
